examples/test/testpolicy18073.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18073
  namespace: namespace365
spec:
  podSelector:
    matchLabels:
      key47: value13
      key43: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value8
          key16: value41
      podSelector:
        matchLabels:
          key6: value0
          key3: value37
